Fix bug with right panel background color on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -26,6 +26,7 @@ body {
 
 body {
     font-family: 'Lato', sans-serif;
+    background-color: #FAFAFA;
 }
 
 a:link, a:visited {
@@ -232,5 +233,6 @@ header .logo {
     .postFeed {
         overflow-y: initial;
         padding: 18px;
+        height: initial;
     }
 }
